--- a/ttc.css
+++ b/ttc.css
@@ -11,12 +11,13 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh; 
+    background-color: rgba(240, 240, 240, 100);
 }
 
 h1 {
     text-align: center;
     font-family: Brush Script MT, cursive;
-    margin-bottom: 50px; /* Adds some space below the h1 */
+    margin-bottom: 50px; 
 }
 
 h2, h3, p {
@@ -96,7 +97,7 @@ h2, h3, p {
 
 /* Content Positioning */
 .content {
-    margin-top: 80px;
+    margin-top: 5px;
     text-align: center;
     padding: 20px;
     flex-grow: 1; 
@@ -179,8 +180,9 @@ h2, h3, p {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("images/Multnomah_Falls.jpeg") no-repeat center center;
+    background: url("images/Trillium_Lake.jpg") no-repeat center center;
     background-size: cover; 
+    background-position: center 30%;
     z-index: -1; 
 }
 
@@ -216,6 +218,7 @@ h2, h3, p {
     height: 100%;
     background: url("images/Olympic_National_Park.jpg") no-repeat center center;
     background-size: cover; 
+    background-position: center 30%;
     z-index: -1; 
 }
 
@@ -249,8 +252,9 @@ h2, h3, p {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("images/Snake_River_Canyon.jpeg") no-repeat center center;
+    background: url("images/Snake_River_Canyon.jpg") no-repeat center center;
     background-size: cover; 
+    background-position: center 15%;
     z-index: -1; 
 }
 
@@ -322,7 +326,7 @@ h2, h3, p {
     height: 100%;
     background: url("images/Joffre_Lake.jpg");
     background-size: cover; 
-    background-position: center 55%;
+    background-position: center 70%;
     z-index: -1; 
 }
 
@@ -339,54 +343,64 @@ h2, h3, p {
 }
 
 /* Beaches Page */
-
 .beaches-container {
     display: flex;
-    justify-content: center;
-    gap: 50px;
-    padding: 40px;
-    flex-wrap: wrap;
+    flex-direction: row; 
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 25px;
+    padding: 10px 15px;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 15px auto;
+    flex-wrap: nowrap; 
 }
 
 .beach-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30%;
-    min-width: 250px;
+    gap: 5px;
+    background: rgba(34, 49, 34, 0.9);
+    border-radius: 10px;
+    margin-bottom: 0;
+    overflow: hidden;
+    padding: 15px;
+    width: 32%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    height: 400px; 
+    position: relative; 
 }
 
-.beach-image-container {
+.beach-item img {
+    width: 100%;
+    height: 50%; 
+    object-fit: cover;
+    border-top-left-radius: 10px; 
+    border-top-right-radius: 10px; 
+}
+
+.beach-item .content {
+    padding: 10px 0;
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .beach-image {
     width: 100%;
-    height: 250px;
-    object-fit: cover;
-    border-radius: 10px;
+    height: 50%; 
+    object-fit: cover; 
+    border-radius: 10px 10px 10px 10px; 
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease, filter 0.3s ease;
 }
 
-.beach-image:hover {
-    transform: scale(1.05);
-    filter: grayscale(75%);
-}
-
 .beach-box {
-    background-color: rgba(34, 49, 34, 100);
     color: white;
     text-align: center;
-    padding: 15px;
-    border-radius: 10px;
-    margin-top: 10px;
-    width: 100%;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
 }
 
 .beach-box h3 {
@@ -436,54 +450,50 @@ h2, h3, p {
     color: rgba(34, 49, 34, 100);
 }
 
+
 /* Cities Page */
 .cities-container {
     display: flex;
-    justify-content: center;
-    gap: 50px;
-    padding: 40px;
-    flex-wrap: wrap;
+    flex-direction: row; 
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 25px;
+    padding: 10px 15px;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 15px auto;
+    flex-wrap: nowrap;
 }
 
 .city-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30%;
-    min-width: 250px;
-}
-
-.city-image-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    gap: 5px;
+    background: rgba(34, 49, 34, 0.9);
+    border-radius: 10px;
+    margin-bottom: 0;
+    overflow: hidden;
+    padding: 15px;
+    width: 32%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    height: 400px; 
+    position: relative;
 }
 
 .city-image {
     width: 100%;
-    height: 250px;
+    height: 50%; 
     object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s ease, filter 0.3s ease;
-}
-
-.city-image:hover {
-    transform: scale(1.05);
-    filter: grayscale(75%);
+    border-radius: 10px 10px 10px 10px; 
+    border-top-left-radius: 10px; 
+    border-top-right-radius: 10px; 
 }
 
 .city-box {
-    background-color: rgba(34, 49, 34, 100);
     color: white;
     text-align: center;
-    padding: 15px;
-    border-radius: 10px;
-    margin-top: 10px;
-    width: 100%;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
 }
 
 .city-box h3 {
@@ -517,7 +527,7 @@ h2, h3, p {
     height: 100%;
     background: url("../TraverseTheCascades/images/Portland.jpg");
     background-size: cover;
-    background-position: center 25%;
+    background-position: center 50%;
     z-index: -1;
 }
 
@@ -533,48 +543,50 @@ h2, h3, p {
     color: rgba(34, 49, 34, 100);
 }
 
+
 /* State Parks Page */
 .parks-container {
     display: flex;
-    justify-content: center;
-    gap: 50px;
-    padding: 40px;
-    flex-wrap: wrap;
+    flex-direction: row; 
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 25px;
+    padding: 10px 15px;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 15px auto;
+    flex-wrap: nowrap;
 }
 
 .park-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30%;
-    min-width: 250px;
-}
-
-.park-image-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    gap: 5px;
+    background: rgba(34, 49, 34, 0.9);
+    border-radius: 10px;
+    margin-bottom: 0;
+    overflow: hidden;
+    padding: 15px;
+    width: 32%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    height: 400px; 
+    position: relative;
 }
 
 .park-image {
     width: 100%;
-    height: 250px;
+    height: 50%; 
     object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+    border-radius: 10px 10px 10px 10px; 
+    border-top-left-radius: 10px; 
+    border-top-right-radius: 10px; 
 }
 
 .park-box {
-    background-color: rgba(34, 49, 34, 100);
     color: white;
     text-align: center;
-    padding: 15px;
-    border-radius: 10px;
-    margin-top: 10px;
-    width: 100%;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
 }
 
 .park-box h3 {
@@ -608,7 +620,7 @@ h2, h3, p {
     height: 100%;
     background: url("../TraverseTheCascades/images/Redwoods.jpg");
     background-size: cover;
-    background-position: center 25%;
+    background-position: center 50%;
     z-index: -1;
 }
 
