--- a/ttc.css
+++ b/ttc.css
@@ -544,7 +544,7 @@ h2, h3, p {
 }
 
 
-/* State Parks Page */
+/* Parks & Scenic Areas Page */
 .parks-container {
     display: flex;
     flex-direction: row; 
